# triesearch

./: CMakeLists.txt  test_trie.cpp  trie.cpp  trie.h
include/: trie.h
src/: test_trie.cpp  trie.cpp
